# geosPythonPackages

./: .coveragerc  .gitattributes  .gitignore  .mypy.ini  .readthedocs.yml  .ruff.toml  .style.yapf  GEOS_INTEGRATION_TESTING.md  README.md  cov_repo.sh  install_packages.sh
geos-ats/: pyproject.toml
geos-geomechanics/: pyproject.toml  setup.py
geos-geomechanics/tests/: testsFunctionsGeomechanicsCalculator.py  testsMohrCircle.py
geos-mesh/: pyproject.toml
geos-mesh-tools/: pyproject.toml
geos-mesh/tests/: conftest.py  test_AttributeMapping.py  test_CellTypeCounter.py  test_CellTypeCounterEnhanced.py  test_CellTypeCounts.py  test_Checks.py  test_CollocatedNodes.py  test_ComputeMeshStats.py  test_CreateConstantAttributePerRegion.py  test_ElementVolumes.py  test_FillPartialArrays.py  test_GeosExtractBlock.py  test_MergeBlocksEnhanced.py  test_MergeColocatedPoints.py  test_MeshDoctorFilterBase.py  test_MeshIdCard.py  test_MeshQualityEnhanced.py  test_QualityMetricSummary.py  test_SelfIntersectingElements.py  test_SplitMesh.py  test_SupportedElements.py  test_all_checks.py  test_arrayHelpers.py  test_arrayModifiers.py  test_cliParsing.py  test_cli_parsing.py  test_clipToMainFrame.py  test_collocatedNodes.py  test_collocated_nodes.py  test_elementVolumes.py  test_element_volumes.py  test_field_operations.py  test_fix_elements_orderings.py  test_generateCube.py  test_generateFractures.py  test_generateGlobalIds.py  test_generate_cube.py  test_generate_fractures.py  test_generate_global_ids.py  test_genericHelpers.py  (+27 more)
geos-posp/: README.md  package-lock.json  pyproject.toml  setup.py  shell.nix
geos-posp/tests/: mainTests.py  testsCollectionSet.py  testsFunctionsFigure2DGenerator.py  testsFunctionsGeomechanicsCalculator.py  testsFunctionsGeosLogReader.py  testsFunctionsGeosUtils.py  testsGeosLogReaderConvergence.py  testsGeosLogReaderFlow.py  testsGeosLogReaderWells.py  testsInvalidLogs.py  testsMohrCircle.py
geos-prep/: .gitignore  README.md  pyproject.toml
geos-processing/: pyproject.toml
geos-processing/tests/: conftest.py  test_AttributeMapping.py  test_AttributesDiff.py  test_CellTypeCounterEnhanced.py  test_CreateConstantAttributePerRegion.py  test_DiffMesh.py  test_FillPartialArrays.py  test_GeomechanicsCalculator.py  test_GeosBlockMerge.py  test_GeosExtractBlock.py  test_MergeBlocksEnhanced.py  test_MeshQualityEnhanced.py  test_MeshToMeshInterpolator.py  test_SplitMesh.py  test_SurfaceGeomechanics.py  test_TetQualityAnalysis.py  test_clipToMainFrame.py
geos-pv/: WIDGET_AUTOMATION.md  paraview.plugins.xml  pyproject.toml  requirements.txt  setup.py
geos-pv/examples/: PVproxyInputs.py  PVproxyTimeStepAggregator.py  PVproxyWidgetsDynamic.py  PVproxyWidgetsStatic.py
geos-pv/tests/: testsFunctionsGeosLogReader.py  testsGeosLogReaderConvergence.py  testsGeosLogReaderFlow.py  testsGeosLogReaderWells.py  testsInvalidLogs.py
geos-python-interface-tools/: pyproject.toml
geos-timehistory/: pyproject.toml  setup.py
geos-trame/: .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  configure.sh  pyproject.toml
geos-trame/tests/: conftest.py  requirements.txt  test_box_intersection.py  test_data_loader.py  test_file_handling.py  test_import.py  test_load_and_visualize_synthetic_dataset.py  test_properties_checker.py  test_saving_attribute_modification.py  test_saving_node_modification.py  test_saving_subnode_modifications.py  test_well_intersection.py  trame_fixtures.py
geos-trame/vue-components/: package-lock.json  package.json  vite.config.js
geos-utils/: pyproject.toml
geos-utils/tests/: test_Logger.py  test_algebraFunctions.py  testsCollectionSet.py  testsFunctionsGeosUtils.py  testsGeometryFunctions.py
geos-xml-tools/: pyproject.toml
geos-xml-tools/tests/: generate_test_xml.py  test_attribute_coverage.py  test_command_line_parsers.py  test_deckSource.py  test_manager.py  test_pyvista_viewer.py  test_regex_tools.py  test_table_generator.py  test_vtk_builder.py  test_xml_formatter.py  test_xml_processor.py  test_xml_redundancy_check.py
geos-xml-viewer/: README.md  pyproject.toml
geos-xml-viewer/tests/: test_deckSource.py
geos_ats_package/: setup.cfg
geos_ats_package/geos_ats/: baseline_io.py  command_line_parsers.py  common_utilities.py  configuration_record.py  debug_geos_ats.py  environment_setup.py  geos_ats_debug.py  history.py  machine_utilities.py  main.py  reporting.py  rules.py  scheduler.py  suite_settings.py  test_builder.py  test_case.py  test_modifier.py  test_steps.py  user_utilities.py
geosx_mesh_doctor/: mesh_doctor-pvplugin.py  mesh_doctor.py  register.py  setup.cfg
geosx_mesh_doctor/checks/: add_fields.py  check_fractures.py  collocated_nodes.py  element_volumes.py  fix_elements_orderings.py  generate_cube.py  generate_fractures.py  generate_global_ids.py  mesh_stats.py  non_conformal.py  reorient_mesh.py  self_intersecting_elements.py  supported_elements.py  triangle_distance.py  vtk_polyhedron.py  vtk_utils.py
geosx_mesh_doctor/mesh_doctor/: main.py  register.py
geosx_mesh_doctor/parsing/: __init__.py  cli_parsing.py  collocated_nodes_parsing.py  element_volumes_parsing.py  fix_elements_orderings_parsing.py  generate_cube_parsing.py  generate_fractures_parsing.py  generate_global_ids_parsing.py  non_conformal_parsing.py  self_intersecting_elements_parsing.py  supported_elements_parsing.py  vtk_output_parsing.py
geosx_mesh_doctor/tests/: test_cli_parsing.py  test_collocated_nodes.py  test_element_volumes.py  test_generate_cube.py  test_generate_fractures.py  test_non_conformal.py  test_reorient_mesh.py  test_self_intersecting_elements.py  test_supported_elements.py  test_triangle_distance.py
hdf5-wrapper/: pyproject.toml
mesh-doctor/: pyproject.toml
mesh-doctor/tests/: test_Checks.py  test_MFD.py  test_MeshDoctorFilterBase.py  test_cliParsing.py  test_collocatedNodes.py  test_convertMD2SG.py  test_elementVolumes.py  test_generateCube.py  test_generateFractures.py  test_generateGlobalIds.py  (+6 more)
pygeos-tools/: pyproject.toml
timehistory_package/: setup.cfg
(+1028 files in other folders)
