
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[project]
name = "geos-ats"
version = "0.2.0"
description = "ATS implementation for GEOS testing"
authors = [{name = "GEOS Contributors" }]
maintainers = [
    {name = "Christopher Sherman", email = "sherman27@llnl.gov"}
]
license = {text = "LGPL-2.1"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
requires-python = ">=3.7"
dependencies = [
    "h5py",
    "mpi4py",
    "numpy",
    "lxml",
    "tabulate",
    "pyyaml",
    "tqdm",
    "requests",
    "GitPython",
    "google-cloud-storage",
    "pip-system-certs",
    "ats @ https://github.com/LLNL/ATS/archive/refs/tags/7.0.105.tar.gz",
]

[project.scripts]
run_geos_ats = "geos.ats.main:main"
setup_ats_environment = "geos.ats.environment_setup:main"
geos_ats_log_check = "geos_ats.helpers.log_check:main"
geos_ats_restart_check = "geos.ats.helpers.restart_check:main"
geos_ats_curve_check = "geos.ats.helpers.curve_check:main"

[project.urls]
Homepage = "https://github.com/GEOS-DEV/geosPythonPackages"
Documentation = "https://geosx-geosx.readthedocs-hosted.com/projects/geosx-geospythonpackages/en/latest/"
Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
"Bug Tracker" = "https://github.com/GEOS-DEV/geosPythonPackages/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.js", "*.css", "*.zip"]
