
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[project]
name = "geos-ats"
version = "0.2.0"
description = "ATS implementation for GEOS testing"
authors = [{name = "GEOS Contributors" }]
maintainers = [
    {name = "Christopher Sherman", email = "sherman27@llnl.gov"}
]
license = {text = "LGPL-2.1"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
requires-python = ">=3.7"
dependencies = [
    "h5py",
    "mpi4py",
    "numpy",
    "lxml",
    "tabulate",
    "pyyaml",
    "tqdm",
    "requests",
    "GitPython",
    "google-cloud-storage",
    "pip-system-certs",
    "ats @ https://github.com/LLNL/ATS/archive/refs/tags/7.0.105.tar.gz",
]

[project.scripts]
run_geos_ats = "geos.ats.main:main"
setup_ats_environment = "geos.ats.environment_setup:main"
geos_ats_log_check = "geos.ats.helpers.log_check:main"
geos_ats_restart_check = "geos.ats.helpers.restart_check:main"
geos_ats_curve_check = "geos.ats.helpers.curve_check:main"
geos_ats_process_tests_fails="geos.ats.helpers.process_tests_failures:main"

[project.urls]
Homepage = "https://github.com/GEOS-DEV/geosPythonPackages"
Documentation = "https://geosx-geosx.readthedocs-hosted.com/projects/geosx-geospythonpackages/en/latest/"
Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
"Bug Tracker" = "https://github.com/GEOS-DEV/geosPythonPackages/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.js", "*.css", "*.zip"]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = "3.10"
exclude = [
    'src', # disable mypy check for the whole package corrections are done
] 
# strict = true

warn_unreachable = true
implicit_reexport = true
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true
warn_unused_configs = true

# Overrides for currently untyped modules
[[tool.mypy.overrides]]
module = [
    "src.*",
]
ignore_errors = true