[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["geos.geomechanics*"]
exclude = ['tests*']

[project]
name = "geos-geomechanics"
version = "0.1.0"
description = "Geomechanics models and processing tools"
authors = [{name = "GEOS contributors" }]
maintainers = [{name = "Martin Lemay", email = "martin.lemay@external.totalenergies.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "License :: OSI Approved :: Apache Software License ",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]

requires-python = ">= 3.10"

dependencies=[
    "geos-utils @ file:./geos-utils",
    "vtk >= 9.3",
    "pandas >= 2.2",
]

[project.urls]
Homepage = "https://github.com/GEOS-DEV/geosPythonPackages"
Documentation = "https://geosx-geosx.readthedocs-hosted.com/projects/geosx-geospythonpackages/en/latest/"
Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
"Bug Tracker" = "https://github.com/GEOS-DEV/geosPythonPackages/issues"

[project.optional-dependencies]
build = [
  "build ~= 1.2"
]
dev = [
   "mypy",
   "yapf",
]
test = [
   "pytest",
   "pytest-cov"
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
console_output_style = "count"
pythonpath = [".", "src"]
python_classes = "Test"
python_files = "test*.py"
python_functions = "test*"
testpaths = ["tests"]
norecursedirs = "bin"
filterwarnings = []

[tool.coverage.run]
branch = true
source = ["src/geos/geomechanics"]