[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geos-mesh-tools"
version = "0.2.0"
description = "Tools for managing meshes in GEOS"
authors = [{name = "GEOS Contributors" }]
maintainers = [
    {name = "Christopher Sherman", email = "sherman27@llnl.gov"}
]
license = {text = "LGPL-2.1"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

requires-python = ">=3.6"

dependencies = [
    "meshio>=5.3.2",
    "numpy",
]

[project.scripts]
    convert_abaqus = "geos.mesh.tools.main:main"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
