[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geos-mesh"
version = "0.0.1"
description = "GEOS mesh tools"
authors = [{name = "GEOS Contributors" }]
maintainers = [
    {name = "Christopher Sherman", email = "sherman27@llnl.gov"}
]
license = {text = "LGPL-2.1"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

requires-python = ">=3.8"

dependencies = [
    "vtk >= 9.1",
    "networkx >= 2.4",
    "tqdm",
    "numpy",
    "meshio>=5.3.2",
]

[project.scripts]
    mesh-doctor = "geos.mesh.doctor.mesh_doctor:main"
    convert_abaqus = "geos.mesh.conversion.main:main"
    
[project.urls]
Homepage = "https://github.com/GEOS-DEV/geosPythonPackages"
Documentation = "https://geosx-geosx.readthedocs-hosted.com/projects/geosx-geospythonpackages/en/latest/"
Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
"Bug Tracker" = "https://github.com/GEOS-DEV/geosPythonPackages/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "checks", "parsing",
]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = "3.10"
exclude = [
    'src', # disable mypy check for the whole package corrections are done
    'tests',
    'build', # exclude build directory
] 
# strict = true

warn_unreachable = true
implicit_reexport = true
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true
warn_unused_configs = true

# Overrides for currently untyped modules
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true