[build-system]
requires = ["setuptools>=61.2", "wheel >= 0.37.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["geos.mesh*"]
exclude = ['tests*']

[project]
name = "geos-mesh"
version = "0.0.1"
description = "GEOS mesh tools"
authors = [{name = "GEOS Contributors" }]
maintainers = [{name = "Christopher Sherman", email = "sherman27@llnl.gov"}]
license = {text = "LGPL-2.1"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

requires-python = ">=3.10"

dependencies = [
    "geos-utils @ file:./geos-utils",
    "vtk >= 9.3",
    "networkx >= 2.4",
    "tqdm >= 4.67",
    "numpy >= 2.2",
    "pandas >= 2.2",
    "meshio >= 5.3",
    "typing_extensions >= 4.12",
    "matplotlib >= 3.10"
]

[project.scripts]
    mesh-doctor = "geos.mesh.doctor.mesh_doctor:main"
    convert_abaqus = "geos.mesh.conversion.main:main"
    
[project.urls]
Homepage = "https://github.com/GEOS-DEV/geosPythonPackages"
Documentation = "https://geosx-geosx.readthedocs-hosted.com/projects/geosx-geospythonpackages/en/latest/"
Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
"Bug Tracker" = "https://github.com/GEOS-DEV/geosPythonPackages/issues"

[project.optional-dependencies]
build = [
  "build ~= 1.2"
]
dev = [
   "mypy",
   "ruff", 
   "yapf",
]
test = [
   "pytest-cov", 
   "pytest"
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
console_output_style = "count"
pythonpath = ["src"]
python_classes = "Test"
python_files = "test*.py"
python_functions = "test*"
testpaths = ["tests"]
norecursedirs = "bin"
filterwarnings = []