[build-system]
requires = ["setuptools>=61.2", "wheel >= 0.37.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["geos_posp*", "PVplugins*"]
exclude = ['tests*']

[project]
name = "geos-posp"
version = "1.0.0"
description = "The Python package geos-posp is dedicated to post-process data from the geos simulation tool."
authors = [{name = "GEOS Contributors" }]
maintainers = [{name = "Alexandre Benedicto", email = "alexandre.benedicto@external.totalenergies.com" },
               {name = "Romain Baville", email = "romain.baville@external.totalenergies.com" },
               {name = "Paloma Martinez", email = "paloma.martinez@external.totalenergies.com" }]
license = {text = "Apache-2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License ",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = [
    "GEOS",
    "Simulation",
]

requires-python = ">= 3.10"

dependencies = [
    "geos-geomechanics",
    "geos-utils",
    "vtk >= 9.3",
    "numpy >= 2.2",
    "pandas >= 2.2",
    "typing_extensions >= 4.12",
]


[project.urls]
Homepage = "https://github.com/GEOS-DEV/geosPythonPackages"
Documentation = "https://geosx-geosx.readthedocs-hosted.com/projects/geosx-geospythonpackages/en/latest/"
Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
"Bug Tracker" = "https://github.com/GEOS-DEV/geosPythonPackages/issues"

[project.optional-dependencies]
build = [
  "build ~= 1.2"
]
dev = [
   "mypy", 
   "yapf",
]
test = [
   "pytest-cov", 
   "pytest"
]

[tool.bumpversion]
current_version = "1.0.0"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
console_output_style = "count"
pythonpath = [".", "src"]
python_classes = "Test"
python_files = "test*.py"
python_functions = "test*"
testpaths = ["tests"]
norecursedirs = "bin"
filterwarnings = []

[tool.coverage.run]
branch = true
source = ["geos-posp"]
omit = [
    "*/pyvistaUtils/*",
    "*/visu/*",
    "*/PVplugins/*",
]