[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["geos_prep*", "PVplugins*"]
exclude = ['tests*']

[project]
name = "geos-prep"
version = "1.0.0"
description = "The Python package geos-prep is dedicated to pre-process data from the geos simulation tool."
authors = [{name = "Martin Lemay", email = "martin.lemay@external.totalenergies.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License ",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = [
    "GEOS",
    "Simulation",
]
dependencies = [
    "vtk >= 9.3",
    "numpy >= 2.2",
    "pandas >= 2.2",
    "typing_extensions >= 4.12",
    "geos_posp >=1.0",
]
requires-python = ">= 3.9"

[project.optional-dependencies]
dev = ["black", "ruff", "mypy", "sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints"]
test = ["pytest-cov", "pytest"]

[tool.bumpversion]
current_version = "1.0.0"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'

[tool.pytest.ini_options]
addopts = ""
console_output_style = "count"
python_classes = "Test"
python_files = "test*.py"
python_functions = "test*"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["PVplugins, geos-prep"]


