[build-system]
requires = ["setuptools>=61.2", "wheel >= 0.37.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["geos.processing*"]
exclude = ['tests*']

[project]
name = "geos-processing"
version = "0.1.0"
description = "GEOS post- and pre-processing tools"
authors = [{name = "GEOS Contributors" }]
maintainers = [
               {name = "Alexandre Benedicto", email = "alexandre.benedicto@external.totalenergies.com" },
               {name = "Romain Baville", email = "romain.baville@external.totalenergies.com" },
               {name = "Paloma Martinez", email = "paloma.martinez@external.totalenergies.com" },
]
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

requires-python = ">=3.10"

dependencies = [
    "geos-geomechanics",
    "geos-utils",
    "geos-mesh",
    "vtk >= 9.3, < 9.6",
    "numpy >= 2.2",
    "typing_extensions >= 4.12",
]


[project.urls]
Homepage = "https://github.com/GEOS-DEV/geosPythonPackages"
Documentation = "https://geosx-geosx.readthedocs-hosted.com/projects/geosx-geospythonpackages/en/latest/"
Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
"Bug Tracker" = "https://github.com/GEOS-DEV/geosPythonPackages/issues"

[project.optional-dependencies]
build = [
  "build ~= 1.2"
]
dev = [
   "mypy",
   "ruff",
   "yapf",
]
test = [
   "pytest-cov",
   "pytest"
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
console_output_style = "count"
pythonpath = ["src"]
python_classes = "Test"
python_files = "test*.py"
python_functions = "test*"
testpaths = ["tests"]
norecursedirs = "bin"
filterwarnings = []


# [tool.coverage.run]
