[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "geos-pv"
version = "0.1.0"
description = "geos-pv is a Python package that gathers Paraview plugins and dedicated utils to process and visualize GEOS inputs and outputs."
authors = [{name = "GEOS Contributors" }]
maintainers = [ 
    {name = "Martin Lemay", email = "martin.lemay@external.totalenergies.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

requires-python = ">=3.10"

dynamic = ["dependencies"]

[project.optional-dependencies]
# dependency to use if install together with paraview
paraview = ["paraview"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
console_output_style = "count"
pythonpath = [".", "src"]
python_classes = "Test"
python_files = "test*.py"
python_functions = "test*"
testpaths = ["tests"]
norecursedirs = "bin"
filterwarnings = []