[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geos-timehistory"
version = "0.1.0"
description = "Scripts to plot time-series data from GEOSX time-history output files"
authors = [{name = "GEOS Contributors" }]
maintainers = [ 
    {name = "William Tobin", email = "tobin6@llnl.gov"}
]
license = {text = "LGPL-2.1"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

requires-python = ">=3.6"

dependencies = [
    "matplotlib",
    "h5py",
    "numpy",
]

[project.scripts]
    plot-timehistory = "geos.timehistory.plot:main"


[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = "3.10"
exclude = [
    'build', # build if local run
]
# strict = true

warn_unreachable = true
implicit_reexport = true
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true
warn_unused_configs = true

# Overrides for currently untyped modules
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true