[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "geos-trame"
version = "1.0.0"
description = "Geos Simulation Modeler"
authors = [{name = "GEOS Contributors" }]
maintainers = [{name = "Alexandre Benedicto", email = "alexandre.benedicto@external.totalenergies.com" },
               {name = "Paloma Martinez", email = "paloma.martinez@external.totalenergies.com" }
               {name = "Jacques Franc", email= "jacques.franc@external.totalenergies.com" }]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: JavaScript",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "Python",
    "Interactive",
    "Web",
    "Application",
    "Framework",
]

dependencies = [
    "typing-extensions==4.12.2",
    "trame==3.6.5",
    "trame-vuetify==2.7.1",
    "trame-code==1.0.1",
    "trame-server==3.2.3",
    "trame-client==3.5.0",
    "trame-simput==2.4.3",
    "trame-vtk>=2.8.14",
    "matplotlib==3.9.4",
    "trame-matplotlib==2.0.3",
    "trame-components==2.4.2",
    "mpld3<0.5.11",
    "xsdata==24.5",
    "xsdata-pydantic[lxml]==24.5",
    "pyvista==0.45.2",
    "dpath==2.2.0",
    "colorcet==3.1.0",
    "funcy==2.0",
    "typing_inspect==0.9.0",
    "typing_extensions>=4.12",
    "PyYAML",
]

[project.optional-dependencies]
build = [
  "build >= 1.2"
]
dev = [
    "pylint",
    "mypy",
    "types-PyYAML",
    "ruff",
    "pre-commit"
]
test = [
    "pytest==8.3.3",
    "pytest-seleniumbase==4.31.6",
    "pixelmatch==0.3.0",
    "Pillow==11.0.0",
    "pytest-mypy==0.10.3",
    "pytest-xprocess==1.0.2"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
geos-trame = "geos.trame.app.main:main"

[project.entry-points.jupyter_serverproxy_servers]
geos-trame = "geos.trame.app.jupyter:jupyter_proxy_info"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = true

# [tool.setuptools.packages.find]
# include = ['geos-trame*']

[tool.setuptools.package-data]
"*" = ["*.js", "*.css"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    #addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"
]
pythonpath = "src/"

[tool.coverage.run]
source = ["src"]

[tool.bumpversion]
current_version = "1.0.0"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]
