[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geos-utils"
version = "0.1.0"
description = "geos-utils is a Python package that gathers utilities common to all GEOS python packages."
authors = [{name = "GEOS Contributors" }]
maintainers = [ 
    {name = "Martin Lemay", email = "martin.lemay@external.totalenergies.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

requires-python = ">=3.9"

dependencies = [
    "typing_extensions",
    "numpy",
]

[project.optional-dependencies]
build = [
  "build ~= 1.2"
]
dev = [
    "pylint",
    "mypy",
    "black",
    "sphinx", 
    "sphinx-rtd-theme", 
    "sphinx-autodoc-typehints"
]
test = [
    "pytest",
    "pytest-cov"
]


[project.scripts]


[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
console_output_style = "count"
pythonpath = [".", "src"]
python_classes = "Test"
python_files = "test*.py"
python_functions = "test*"
testpaths = ["tests"]
norecursedirs = "bin"
filterwarnings = []

[tool.coverage.run]
branch = true
source = ["pybend"]


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true