[build-system]
requires = ["setuptools>=61.2", "wheel >= 0.37.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["geos.utils*"]
exclude = ['tests*']

[project]
name = "geos-utils"
version = "0.1.0"
description = "geos-utils is a Python package that gathers utilities common to all GEOS python packages."
authors = [{name = "GEOS Contributors" }]
maintainers = [{name = "Alexandre Benedicto", email = "alexandre.benedicto@external.totalenergies.com" },
               {name = "Romain Baville", email = "romain.baville@external.totalenergies.com" },
               {name = "Paloma Martinez", email = "paloma.martinez@external.totalenergies.com" },
               {name = "Jacques Franc", email = "jacques.franc@external.totalenergies.com" },
               ]
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

requires-python = ">=3.10"

dependencies = [
    "numpy >= 2.2",
    "typing_extensions >= 4.12",
]

[project.optional-dependencies]
build = [
  "build ~= 1.2"
]
dev = [
    "mypy",
    "yapf",
]
test = [
    "pytest",
    "pytest-cov"
]


[project.scripts]


[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
console_output_style = "count"
pythonpath = [".", "src"]
python_classes = "Test"
python_files = "test*.py"
python_functions = "test*"
testpaths = ["tests"]
norecursedirs = "bin"
filterwarnings = []

[tool.coverage.run]
branch = true
source = ["src/geos/utils"]
